--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Test HTML</title>
     </head>
     <body>
-        Questo è il mio primo primo file per il Training
+        Questo è il mio primo primo file per il Training!
+        Non so ancora cosa ci farò...
     </body>
 </html>
